2010-06-08  Andreas Schwab  <schwab@linux-m68k.org>

	* minibuf.c (Fall_completions): Add more checks.

2010-06-08  Juanma Barranquero  <lekktu@gmail.com>

	* minibuf.c (Fall_completions): Check COLLECTION's size (bug#6378).

2010-06-03  Andreas Schwab  <schwab@linux-m68k.org>

	* process.c (conv_lisp_to_sockaddr): Fix conversion of IPv4
	address.  (Bug#6346)

2010-06-03  Juanma Barranquero  <lekktu@gmail.com>

	* ccl.c (Fccl_program_p): Fix typo in docstring.

2010-05-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keymap.c (Fwhere_is_internal): Fix handling of remapping (in thread
	of bug#6305).

2010-05-27  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (redisplay_window): After redisplay, check if point is
	still valid before setting it (Bug#6177).

2010-05-20  enami tsugutomo  <tsugutomo.enami@jp.sony.com>

	* s/netbsd.h: If terminfo is found, use it in preference to
	termcap.  (Bug#6190)  [Backport from trunk]

2010-05-20  Kevin Ryde  <user42@zip.com.au>

	* keyboard.c (Vlast_command, Vkeyboard_translate_table)
	(Voverriding_terminal_local_map, Vsystem_key_alist)
	(Vlocal_function_key_map): Fix manual link in docstring (Bug#6224).

2010-05-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* editfns.c (Fbyte_to_string): New function.

2010-05-18  Chong Yidong  <cyd@stupidchicken.com>

	* character.c (Fstring, Funibyte_string): Use SAFE_ALLOCA to
	prevent stack overflow if number of arguments is too large
	(Bug#6214).

2010-05-11  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in ($(BLD)/w32fns.$(O)): Depend on $(SRC)/w32.h.

	* w32fns.c: Include w32.h.
	(Fw32_shell_execute): Decode the error message before passing it
	to `error'.  (Bug#6126)

2010-05-11  Karel Klic  <kklic@redhat.com>

	* ftfont.c: Fix incorrect parentheses of #if condition for
	definining M17N_FLT_USE_NEW_FEATURE.

2010-05-07  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.2 released.

2010-04-30  Andreas Schwab  <schwab@linux-m68k.org>
